@@ -1,3 +1,7 @@
+Thu Jul 14 12:07:04 CEST 2011 (acab)
+------------------------------------
+ * libclamav/lzma_iface.c: shut up huge alloc warns for 7z/lzma (bb#2913)
+
 Sat Jun 18 17:44:42 CEST 2011 (acab)
 ------------------------------------
  * clamav-milter: add config option "SupportMultipleRecipients" (bb#2879)
